--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,3 @@
-#
-# Copyright (c) 2018 Halcyon Mobile
-# http://www.halcyonmobile.com
-# All rights reserved.
-#
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
@@ -16,3 +11,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.useAndroidX=true
+android.enableJetifier=true
