Enable minify for debug and release build types

--- a/firestore/build.gradle
+++ b/firestore/build.gradle
@@ -15,6 +15,15 @@ android {
 
         consumerProguardFiles 'consumer-proguard-rules.pro'
     }
+    buildTypes {
+        debug {
+            minifyEnabled true
+            useProguard false
+        }
+        release {
+            minifyEnabled true
+        }
+    }
 }
 
 kotlin {
