--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext{
         kotlin_version = '1.2.41'
-        android_gradle_plugin = '3.2.0-alpha18'
+        android_gradle_plugin = '3.2.0-beta01'
     }
     repositories {
         google()
@@ -40,5 +40,5 @@ ext {
     compile_sdk = 28
     coroutines = '0.23.2'
     firebase_core = '16.0.1'
-    firebase_firestore = '17.0.1'
+    firebase_firestore = '17.0.2'
 }
