--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.2.50'
-        android_gradle_plugin = '3.2.0-beta02'
+        kotlin_version = '1.3.0-rc-116'
+        android_gradle_plugin = '3.3.0-alpha12'
     }
     repositories {
         google()
         jcenter()
+        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://kotlin.bintray.com/kotlinx' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$android_gradle_plugin"
@@ -26,6 +28,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://kotlin.bintray.com/kotlinx' }
     }
 }
 
@@ -34,11 +38,11 @@ task clean(type: Delete) {
 }
 
 ext {
-    build_tools = '28.0.0'
-    min_sdk = project.hasProperty('minSdkV') ? minSdkV.toInteger() : 16
+    build_tools = '28.0.3'
+    min_sdk = project.hasProperty('minSdkV') ? minSdkV.toInteger() : 19
     target_sdk = 28
     compile_sdk = 28
-    coroutines = '0.23.2'
-    firebase_core = '16.0.1'
-    firebase_firestore = '17.0.2'
+    coroutines = '0.27.0-eap13'
+    firebase_core = '16.0.3'
+    firebase_firestore = '17.1.0'
 }
