--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    apply from: 'versions.gradle'
     ext{
         kotlin_version = '1.3.0-rc-116'
         android_gradle_plugin = '3.3.0-alpha12'
@@ -14,7 +15,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$android_gradle_plugin"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.1.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.2'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.17"
@@ -35,14 +36,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    build_tools = '28.0.3'
-    min_sdk = project.hasProperty('minSdkV') ? minSdkV.toInteger() : 19
-    target_sdk = 28
-    compile_sdk = 28
-    coroutines = '0.27.0-eap13'
-    firebase_core = '16.0.3'
-    firebase_firestore = '17.1.0'
 }
