--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka-android'
-apply from: 'deploy.gradle'
+//apply from: 'deploy.gradle'
 
 android {
     buildToolsVersion build_tools
@@ -14,7 +14,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        consumerProguardFiles 'consumer-proguard-rules.pro'
+        consumerProguardFiles 'consumer-consume-consumer-proguard-rules.pro'
     }
 }
 
