--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.arthurnagy.kotlincoroutines" />
+<manifest package="me.arthurnagy.kotlincoroutines.firebasecore" />
