--- a/versions.gradle
+++ b/versions.gradle
@@ -1,11 +1,15 @@
 ext {
+
+    android_gradle_plugin = '3.3.0-alpha13'
+    kotlin_version = '1.3.0-rc-146'
+
     build_tools = '28.0.3'
     min_sdk = project.hasProperty('minSdkV') ? minSdkV.toInteger() : 19
     target_sdk = 28
     compile_sdk = 28
-    coroutines = '0.27.0-eap13'
-    firebase_core = '16.0.3'
-    firebase_firestore = '17.1.0'
+    coroutines = '0.30.2-eap13'
+    firebase_core = '16.0.4'
+    firebase_firestore = '17.1.1'
 
     library_version_code = 3
     library_version_name = '0.0.3'
