--- a/firestore/build.gradle
+++ b/firestore/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka-android'
-//apply from: 'deploy.gradle'
 
 android {
     buildToolsVersion build_tools
@@ -38,3 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
+
+apply from: rootProject.file('release-bintray.gradle')
